fix collapse navbar and add favicon

--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -41,6 +41,12 @@
     animation: 1s ease-out 0s 1 slideInFromTop;
 }
 
+@media (max-width: 768px) { 
+    .navbar li {
+        margin: 5px;
+    }
+}
+
 @keyframes slideInFromTop {
     0% {
       transform: translateY(-100%);
